k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: spring-web-dev
  name: spring-web-dev
